service_front2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-srv2
spec:
  ports:
  - name: nginx
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: my-nginx
