my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: homework.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-srv
            port:
              number: 8080
  tls:
  - hosts:
      - homework.local
    secretName: my-secret
